# ORIP

./: CMakeLists.txt
block_match_inc_d/: CMakeLists.txt  library.cpp  library.h  main.cpp
block_match_std_i/: CMakeLists.txt  library.cpp
common_lib/: CMakeLists.txt  commandlineparser.cpp  commandlineparser.h  common_lib.cpp  common_lib.h  convolution.h  framereader.cpp  framereader.h  framewriter.cpp  framewriter.h  matrix.cpp  matrix.h  roi_mask.h  sleep_t.h  stopwatch.cpp  stopwatch.h  timing.h  yuvreader.cpp  yuvreader.h  yuvwriter.cpp  yuvwriter.h
conv_inc_d/: CMakeLists.txt
conv_inc_i/: CMakeLists.txt  main.cpp
conv_std_d/: CMakeLists.txt  library.cpp  library.h
conv_std_i/: CMakeLists.txt  library.h
orip_block_match_std_i_v2/: library.h  main.cpp
orip_conv_inc_d_v2/: library.cpp  library.h  main.cpp
orip_conv_inc_i_v2/: library.cpp  library.h
orip_conv_std_i_v2/: library.cpp  main.cpp
orip_trans_inc_d_v2/: library.h  main.cpp
orip_trans_inc_i_v2/: library.h  main.cpp
orip_trans_std_d_v2/: library.h
test/: CMakeLists.txt  main.cpp
tools/: auto_inc_roi.sh  auto_std_roi.sh  kernel_motion.txt  read_mat.m  write_mat.m
trans_inc_d/: CMakeLists.txt  library.cpp
trans_inc_i/: CMakeLists.txt  library.cpp
trans_std_d/: CMakeLists.txt  library.cpp  main.cpp
trans_std_i/: CMakeLists.txt  library.cpp  library.h  main.cpp
