cmake_minimum_required (VERSION 2.6) 
project (ORIP) 

add_subdirectory (common_lib) 
add_subdirectory (block_match_inc_d)
add_subdirectory (block_match_std_i)
add_subdirectory (conv_inc_d)
add_subdirectory (conv_inc_i)
add_subdirectory (conv_std_d)
add_subdirectory (conv_std_i)
add_subdirectory (trans_inc_d)
add_subdirectory (trans_inc_i)
add_subdirectory (trans_std_d)
add_subdirectory (trans_std_i)